# StackChan

./: test_openai_realtime.py
.github/workflows/: avatar-web-pages.yml
docs/spec/: 2026-05-09-avatar-sdl-simulator.md
firmware/: AGENTS.md  README.md  sdkconfig.defaults
firmware/main/: Kconfig.projbuild  main.cpp
firmware/main/apps/app_ai_agent/: app_ai_agent.cpp
firmware/main/hal/: hal.h  hal_openai_webrtc.cpp
firmware/main/hal/board/: stackchan.cc
firmware/sim/avatar_sdl/: CMakeLists.txt  README.md  lv_conf.h  main.cpp
firmware/sim/avatar_web/: index.html  package-lock.json  package.json  vite.config.ts
firmware/sim/avatar_web/src/: App.tsx  AvatarCanvas.tsx  styles.css  useAvatarKeyboard.ts
firmware/sim/avatar_web/src/avatar/: draw.ts  presets.ts  state.ts
firmware/sim/avatar_web/src/controls/: AvatarControls.tsx
server/: .gitignore
